force-app/main/default/objects/Engagement_Grid_Range__mdt/Engagement_Grid_Range__mdt.object-meta.xml
<CustomObject>
	<label>Engagement Grid Range</label>
	<pluralLabel>Engagement Grid Ranges</pluralLabel>
</CustomObject>