force-app/main/default/objects/Engagement_Grid_Range__mdt/fields/Frequency_Range__c.field-meta.xml
<CustomField>
	<fullName>Frequency_Range__c</fullName>
	<label>Frequency Range</label>
	<length>10</length>
	<type>Text</type>
</CustomField>