force-app/main/default/objects/Engagement_Grid_Range__mdt/fields/Monetary_Range__c.field-meta.xml
<CustomField>
	<fullName>Monetary_Range__c</fullName>
	<label>Monetary Range</label>
	<length>10</length>
	<type>Text</type>
</CustomField>