force-app/main/default/objects/Engagement_Grid_Range__mdt/fields/Order__c.field-meta.xml
<CustomField>
	<fullName>Order__c</fullName>
	<label>Order</label>
	<precision>1</precision>
	<required>true</required>
	<scale>0</scale>
	<type>Number</type>
</CustomField>