force-app/main/default/objects/Engagement_Grid_Range__mdt/fields/Recency_Range__c.field-meta.xml
<CustomField>
	<fullName>Recency_Range__c</fullName>
	<label>Recency Range</label>
	<length>10</length>
	<type>Text</type>
</CustomField>