force-app/main/default/objects/Engagement_Grid_Range__mdt/fields/Score__c.field-meta.xml
<CustomField>
	<fullName>Score__c</fullName>
	<label>Score</label>
	<precision>2</precision>
	<scale>0</scale>
	<type>Number</type>
</CustomField>